changes some styles

--- a/blog-intelligent.html
+++ b/blog-intelligent.html
@@ -39,7 +39,7 @@
                 <a class="navbar-brand" href="index.html">
                     <img src="images/logo.svg" alt="Aktionable.ai Logo" class="logo-img">
                     <div class="brand-text">
-                        <div class="brand-main">A<div class="kt">kt</div>ionable Ai</div>
+                        <div class="brand-main">A<div class="kt">kt</div>ionable AI</div>
                         <div class="brand-tagline">Smarter AI. Real Results</div>
                     </div>
                 </a>
@@ -133,10 +133,10 @@
             <div class="name">
                 <img src="images/name.svg" alt="Author" />
 
-                <strong>Luca Borroni</strong><br>
+                <strong>Scott Weber</strong><br>
             </div>
             <div>
-                <span>March,17,2025</span>
+                <span>June,11,2025</span>
             </div>
         </div>
     </section>
@@ -350,7 +350,7 @@
                                         href="#">
                                         <img src="images/logo-large.png" alt="Aktionable.ai Logo" class="logo-img">
                                         <div class="brand-text ">
-                                            <div class="brand-main">Aktionable Ai</div>
+                                            <div class="brand-main">Aktionable AI</div>
                                             <div class="brand-tagline">Smarter AI. Real Results</div>
                                         </div>
                                     </a>
