--- a/blog.html
+++ b/blog.html
@@ -39,7 +39,7 @@
         <a class="navbar-brand" href="index.html">
           <img src="images/logo.svg" alt="Aktionable.ai Logo" class="logo-img">
           <div class="brand-text">
-            <div class="brand-main">A<div class="kt">kt</div>ionable Ai</div>
+            <div class="brand-main">A<div class="kt">kt</div>ionable AI</div>
             <div class="brand-tagline">Smarter AI. Real Results</div>
           </div>
         </a>
@@ -149,7 +149,7 @@
                 <div class="card">
                     <div class="image-placeholder"></div>
                     <h3>From Data to Action: Why Insights Alone Aren't Enough</h3>
-                    <p class="date">November 20, 2025</p>
+                    <p class="date">June 11, 2025</p>
                     <a href="blog-automation.html" class="read-more"> <span><svg width="100" height="35" viewBox="0 0 100 35"
                                 fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -169,7 +169,7 @@
                 <div class="card">
                     <div class="image-placeholder"></div>
                     <h3>How Intelligent Automation is Changing Enterprises</h3>
-                    <p class="date">November 20, 2025</p>
+                    <p class="date">June 11, 2025</p>
                     <a href="blog-intelligent.html" class="read-more"> <span><svg width="100" height="35" viewBox="0 0 100 35"
                                 fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -188,7 +188,7 @@
                 <div class="card">
                     <div class="image-placeholder"></div>
                     <h3>Real-World AI: Success Stories Across Industries</h3>
-                    <p class="date">November 20, 2025</p>
+                    <p class="date">June 11, 2025</p>
                     <a href="intel-automation-chages.html" class="read-more"> <span><svg width="100" height="35" viewBox="0 0 100 35"
                                 fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -207,7 +207,7 @@
                 <div class="card">
                     <div class="image-placeholder"></div>
                     <h3>Lorem ipsum dolor sit amet, consectetur</h3>
-                    <p class="date">November 20, 2025</p>
+                    <p class="date">June 11, 2025</p>
                     <a href="#" class="read-more"><span><svg width="100" height="35" viewBox="0 0 100 35"
                                 fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -401,7 +401,7 @@
                       href="#">
                       <img src="images/logo-large.png" alt="Aktionable.ai Logo" class="logo-img">
                       <div class="brand-text ">
-                        <div class="brand-main">Aktionable Ai</div>
+                        <div class="brand-main">Aktionable AI</div>
                         <div class="brand-tagline">Smarter AI. Real Results</div>
                       </div>
                     </a>
