--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <a class="navbar-brand" href="index.html">
           <img src="images/logo.svg" alt="Aktionable.ai Logo" class="logo-img">
           <div class="brand-text">
-            <div class="brand-main">A<div class="kt">kt</div>ionable Ai</div>
+            <div class="brand-main">A<div class="kt">kt</div>ionable AI</div>
             <div class="brand-tagline">Smarter AI. Real Results</div>
           </div>
         </a>
@@ -68,7 +68,7 @@
               <a class="nav-link" href="service.html">Services</a>
             </li>
             <li class="nav-item dropdown display-small-none">
-              <a class="nav-link dropdown-toggle" href="blog.html" role="button" data-bs-toggle="dropdown"
+              <a class="nav-link dropdown-toggle" href="blog.html" role="button" 
                 aria-expanded="false">
                 Resources
                 <svg class="custom-dropdown-icon" width="16" height="9" viewBox="0 0 16 9" fill="none"
@@ -85,7 +85,7 @@
               <a class="nav-link" href="contact-us.html">Contact Us</a>
             </li>
             <li class="nav-item dropdown display-lg-none">
-              <a class="nav-link dropdown-toggle" href="contact-us.html" role="button" data-bs-toggle="dropdown"
+              <a class="nav-link dropdown-toggle" href="contact-us.html" role="button" 
                 aria-expanded="false">
                 Resources
                 <svg class="custom-dropdown-icon" width="16" height="9" viewBox="0 0 16 9" fill="none"
@@ -437,37 +437,37 @@
         <div class="card">
           <img src="images/insights1.svg" alt="Automation" />
           <div class="card-meta">
-            <div class="meta-box"><i><img src="images/person.svg" alt="LinkedIn"></i> Luca Borreani</div>
-            <div class="meta-box"><i><img src="images/person.svg" alt="LinkedIn"></i> March,17,2025</div>
+            <div class="meta-box"><i><img src="images/person.svg" alt="LinkedIn"></i> Scot Weber</div>
+            <div class="meta-box"><i><img src="images/person.svg" alt="LinkedIn"></i> June,11,2025</div>
           </div>
           <div class="card-title">How Intelligent Automation is Changing Enterprises</div>
-          <button class="view-button">View</button>
+          <button class="view-button"><a href="blog-intelligent.html">View</a></button>
         </div>
 
         <!-- Card 2 -->
         <div class="card">
           <img src="images/insights2.svg" alt="Data Action" />
           <div class="card-meta">
-            <div class="meta-box"><i><img src="images/person.svg" alt="LinkedIn"></i> Luca Borreani</div>
-            <div class="meta-box"><i><img src="images/person.svg" alt="LinkedIn"></i> March,17,2025</div>
+            <div class="meta-box"><i><img src="images/person.svg" alt="LinkedIn"></i> Sunil Kanchi</div>
+            <div class="meta-box"><i><img src="images/person.svg" alt="LinkedIn"></i> June,11,2025</div>
           </div>
           <div class="card-title">From Data to Action: Why Insights Alone Aren’t Enough</div>
-          <button class="view-button">View</button>
+          <button class="view-button"><a href="blog-automation.html">view</a></button>
         </div>
 
         <!-- Card 3 -->
         <div class="card">
           <img src="images/insights3.svg" alt="AI Success" />
           <div class="card-meta">
-            <div class="meta-box"><i><img src="images/person.svg" alt="LinkedIn"></i> Luca Borreani</div>
-            <div class="meta-box"><i><img src="images/person.svg" alt="LinkedIn"></i> March,17,2025</div>
+            <div class="meta-box"><i><img src="images/person.svg" alt="LinkedIn"></i> Dr Pavan sai</div>
+            <div class="meta-box"><i><img src="images/person.svg" alt="LinkedIn"></i> June,11,2025</div>
           </div>
           <div class="card-title">Real-World AI: Success Stories Across Industries</div>
-          <button class="view-button">View</button>
+          <button class="view-button"><a href="intel-automation-chages.html">View</button>
         </div>
       </div>
 
-      <button class="read-more-button">Read More</button>
+      <button class="read-more-button"> <a href="blog.html">Read More</a></button>
     </section>
     <!-- 
     -------------------------------------------------------------------------------
@@ -600,7 +600,7 @@
                       href="#">
                       <img src="images/logo-large.png" alt="Aktionable.ai Logo" class="logo-img">
                       <div class="brand-text ">
-                        <div class="brand-main">Aktionable Ai</div>
+                        <div class="brand-main">Aktionable AI</div>
                         <div class="brand-tagline">Smarter AI. Real Results</div>
                       </div>
                     </a>
