--- a/intel-automation-chages.html
+++ b/intel-automation-chages.html
@@ -39,7 +39,7 @@
                 <a class="navbar-brand" href="index.html">
                     <img src="images/logo.svg" alt="Aktionable.ai Logo" class="logo-img">
                     <div class="brand-text">
-                        <div class="brand-main">A<div class="kt">kt</div>ionable Ai</div>
+                        <div class="brand-main">A<div class="kt">kt</div>ionable AI</div>
                         <div class="brand-tagline">Smarter AI. Real Results</div>
                     </div>
                 </a>
@@ -131,10 +131,10 @@
             <div class="name">
                 <img src="images/name.svg" alt="Author" />
 
-                <strong>Luca Borroni</strong><br>
+                <strong>Dr Pavan Sai</strong><br>
             </div>
             <div>
-                <span>March,17,2025</span>
+                <span>June,11,2025</span>
             </div>
         </div>
     </section>
@@ -156,19 +156,46 @@
                     <div class="title">
                         <h1>Healthcare: Revolutionizing Diagnostics and Patient Care </h1>
                         <br />
-                        <p>AI is transforming healthcare by enhancing diagnostics, personalizing treatments, and streamlining operations. A standout example is “IBM Watson Health”, which has been used to assist oncologists in cancer treatment planning. By analyzing vast datasets of medical literature and patient records, Watson identifies personalized treatment options, reducing diagnosis times and improving outcomes. In one case, a hospital using Watson identified a rare leukemia subtype in a patient within minutes, a process that typically takes weeks, enabling faster treatment and better prognosis. </p>
+                        <p>AI is transforming healthcare by enhancing diagnostics, personalizing treatments, and
+                            streamlining operations. A standout example is “IBM Watson Health”, which has been used to
+                            assist oncologists in cancer treatment planning. By analyzing vast datasets of medical
+                            literature and patient records, Watson identifies personalized treatment options, reducing
+                            diagnosis times and improving outcomes. In one case, a hospital using Watson identified a
+                            rare leukemia subtype in a patient within minutes, a process that typically takes weeks,
+                            enabling faster treatment and better prognosis. </p>
                         <br />
-                        <p>Another success is “Google Health’s DeepMind”, which developed an AI model to detect diabetic retinopathy from retinal scans with accuracy rivaling human specialists. Deployed in hospitals across India and the UK, this technology has screened thousands of patients, preventing vision loss by enabling early intervention. These examples demonstrate AI’s ability to enhance precision and accessibility in healthcare. </p>
+                        <p>Another success is “Google Health’s DeepMind”, which developed an AI model to detect diabetic
+                            retinopathy from retinal scans with accuracy rivaling human specialists. Deployed in
+                            hospitals across India and the UK, this technology has screened thousands of patients,
+                            preventing vision loss by enabling early intervention. These examples demonstrate AI’s
+                            ability to enhance precision and accessibility in healthcare. </p>
                         <br />
                         <h2>Retail: Personalizing Customer Experiences </h2><br />
-                        <p>In retail, AI is redefining how businesses engage customers and optimize operations. “Amazon” is a pioneer, using AI-driven recommendation engines to personalize shopping experiences. By analyzing browsing history, purchase patterns, and preferences, Amazon’s algorithms suggest products with remarkable accuracy, driving over 35% of its revenue through recommendations. This personalization has boosted customer satisfaction and loyalty, setting a benchmark for the industry. 
+                        <p>In retail, AI is redefining how businesses engage customers and optimize operations. “Amazon”
+                            is a pioneer, using AI-driven recommendation engines to personalize shopping experiences. By
+                            analyzing browsing history, purchase patterns, and preferences, Amazon’s algorithms suggest
+                            products with remarkable accuracy, driving over 35% of its revenue through recommendations.
+                            This personalization has boosted customer satisfaction and loyalty, setting a benchmark for
+                            the industry.
                         </p>
                         <br />
-                        <p>Similarly, “Walmart” leverages AI to optimize inventory and supply chain management. Its AI system forecasts demand by analyzing historical sales, weather patterns, and local events, reducing overstock by 20% and minimizing waste. By integrating AI with real-time data, Walmart ensures shelves are stocked efficiently, enhancing customer experiences and cutting costs. </p>
+                        <p>Similarly, “Walmart” leverages AI to optimize inventory and supply chain management. Its AI
+                            system forecasts demand by analyzing historical sales, weather patterns, and local events,
+                            reducing overstock by 20% and minimizing waste. By integrating AI with real-time data,
+                            Walmart ensures shelves are stocked efficiently, enhancing customer experiences and cutting
+                            costs. </p>
                         <br>
                         <h2>Transportation: Streamlining Logistics and Autonomous Systems </h2><br />
-                        <p>In transportation, AI is enhancing logistics and paving the way for autonomous systems. “UPS” uses an AI-powered routing system called ORION (On-Road Integrated Optimization and Navigation) to optimize delivery routes. By analyzing traffic, weather, and package data, ORION has reduced delivery miles by over 100 million annually, saving fuel and cutting emissions. This efficiency has strengthened UPS’s operational resilience and sustainability. </p><br>
-                        <p>Meanwhile, “Tesla” continues to push boundaries with AI in autonomous driving. Its neural networks process data from cameras, radar, and sensors to enable features like Autopilot and Full Self-Driving. While still evolving, Tesla’s AI has logged billions of miles in real-world testing, improving safety and paving the way for fully autonomous vehicles. </p>
+                        <p>In transportation, AI is enhancing logistics and paving the way for autonomous systems. “UPS”
+                            uses an AI-powered routing system called ORION (On-Road Integrated Optimization and
+                            Navigation) to optimize delivery routes. By analyzing traffic, weather, and package data,
+                            ORION has reduced delivery miles by over 100 million annually, saving fuel and cutting
+                            emissions. This efficiency has strengthened UPS’s operational resilience and sustainability.
+                        </p><br>
+                        <p>Meanwhile, “Tesla” continues to push boundaries with AI in autonomous driving. Its neural
+                            networks process data from cameras, radar, and sensors to enable features like Autopilot and
+                            Full Self-Driving. While still evolving, Tesla’s AI has logged billions of miles in
+                            real-world testing, improving safety and paving the way for fully autonomous vehicles. </p>
                     </div>
                 </div>
                 <div class="col-lg-5">
@@ -177,22 +204,39 @@
                     </div>
                     <h2 class="pt-5">Finance: Enhancing Fraud Detection and Customer Service </h2>
                     <br />
-                    <p>The financial sector has embraced AI to combat fraud and improve service delivery. “JPMorgan Chase” uses an AI-powered system called COiN (Contract Intelligence) to analyze legal documents. Previously, reviewing 12,000 commercial contracts took 360,000 hours annually. COiN reduced this to seconds per document, saving millions in labor costs while minimizing errors. This efficiency allows the bank to focus on strategic initiatives. </p>
+                    <p>The financial sector has embraced AI to combat fraud and improve service delivery. “JPMorgan
+                        Chase” uses an AI-powered system called COiN (Contract Intelligence) to analyze legal documents.
+                        Previously, reviewing 12,000 commercial contracts took 360,000 hours annually. COiN reduced this
+                        to seconds per document, saving millions in labor costs while minimizing errors. This efficiency
+                        allows the bank to focus on strategic initiatives. </p>
                     <br>
                     <p>
-                      in fraud detection, “Mastercard” employs AI to analyze billions of transactions in real time. Its machine learning models identify suspicious patterns, such as unusual spending behaviors, with 98% accuracy, preventing billions in fraudulent transactions annually. Additionally, AI-powered chatbots at banks like “Bank of America” (via its virtual assistant, Erica) handle millions of customer inquiries, from balance checks to financial advice, improving response times and customer satisfaction.  
+                        in fraud detection, “Mastercard” employs AI to analyze billions of transactions in real time.
+                        Its machine learning models identify suspicious patterns, such as unusual spending behaviors,
+                        with 98% accuracy, preventing billions in fraudulent transactions annually. Additionally,
+                        AI-powered chatbots at banks like “Bank of America” (via its virtual assistant, Erica) handle
+                        millions of customer inquiries, from balance checks to financial advice, improving response
+                        times and customer satisfaction.
                     </p>
                     <br>
                     <h2>
-                      Manufacturing: Optimizing Production and Maintenance  
+                        Manufacturing: Optimizing Production and Maintenance
                     </h2>
                     <br />
                     <p>
-                      AI is revolutionizing manufacturing by enabling predictive maintenance and process optimization. “Siemens” uses AI to monitor equipment health in its factories. By analyzing sensor data, AI predicts when machines are likely to fail, scheduling maintenance before breakdowns occur. This approach has reduced downtime by up to 30%, saving millions in production losses and extending equipment lifespans.   
+                        AI is revolutionizing manufacturing by enabling predictive maintenance and process optimization.
+                        “Siemens” uses AI to monitor equipment health in its factories. By analyzing sensor data, AI
+                        predicts when machines are likely to fail, scheduling maintenance before breakdowns occur. This
+                        approach has reduced downtime by up to 30%, saving millions in production losses and extending
+                        equipment lifespans.
                     </p>
                     <br>
                     <p>
-                      “General Electric (GE)” has also seen success with its Predix platform, an AI-driven system that optimizes industrial processes. In one case, GE’s AI analyzed turbine performance data to improve energy efficiency in power plants, reducing fuel consumption by 5% and lowering emissions. These advancements highlight AI’s role in driving sustainability and cost-efficiency in manufacturing.   
+                        “General Electric (GE)” has also seen success with its Predix platform, an AI-driven system that
+                        optimizes industrial processes. In one case, GE’s AI analyzed turbine performance data to
+                        improve energy efficiency in power plants, reducing fuel consumption by 5% and lowering
+                        emissions. These advancements highlight AI’s role in driving sustainability and cost-efficiency
+                        in manufacturing.
                     </p>
 
                 </div>
@@ -316,7 +360,7 @@
                                         href="#">
                                         <img src="images/logo-large.png" alt="Aktionable.ai Logo" class="logo-img">
                                         <div class="brand-text ">
-                                            <div class="brand-main">Aktionable Ai</div>
+                                            <div class="brand-main">Aktionable AI</div>
                                             <div class="brand-tagline">Smarter AI. Real Results</div>
                                         </div>
                                     </a>
