--- a/platform.html
+++ b/platform.html
@@ -39,7 +39,7 @@
                 <a class="navbar-brand" href="index.html">
                     <img src="images/logo.svg" alt="Aktionable.ai Logo" class="logo-img">
                     <div class="brand-text">
-                        <div class="brand-main">A<div class="kt">kt</div>ionable Ai</div>
+                        <div class="brand-main">A<div class="kt">kt</div>ionable AI</div>
                         <div class="brand-tagline">Smarter AI. Real Results</div>
                     </div>
                 </a>
@@ -270,7 +270,7 @@
         <div class="sticky-card" id="card1">
             <div class="card-header-tab header-tab-1">AdoptIQ</div>
             <div class="row">
-                <div class="card-content col-7">
+                <div class="card-content col-7 d-flex justify-content-center flex-column">
                     <h5>AdoptIQ – Digital Adoption Analytics & Automation</h5>
                     <p>AdoptIQ helps you maximize ROI on your software investments through advanced digital adoption
                         analytics and in-app automation. It monitors user engagement across your organization's tools,
@@ -284,7 +284,7 @@
         <div class="sticky-card" id="card2">
             <div class="card-header-tab header-tab2">AssistIQ</div>
             <div class="row">
-                <div class="card-content col-7">
+                <div class="card-content col-7 d-flex justify-content-center flex-column">
                     <h5>AssistIQ – AI Assistant & Insights Co-Pilot</h5>
                     <p>AssistIQ is your intelligent AI-powered assistant that delivers deep contextual insights,
                         generates reports, and surfaces operational inefficiencies to accelerate decision-making. It
@@ -297,7 +297,7 @@
         <div class="sticky-card" id="card3">
             <div class="card-header-tab header-tab3">Contrakt AI</div>
             <div class="row">
-                <div class="card-content col-7">
+                <div class="card-content col-7 d-flex justify-content-center flex-column">
                     <h5>Contrakt AI – Intelligent Legal Automation</h5>
                     <p>Contrakt AI automates legal workflows by intelligently analyzing contracts, extracting clauses,
                         and recommending actions. Reduce manual review time and improve compliance with AI-powered
@@ -310,7 +310,7 @@
         <div class="sticky-card" id="card4">
             <div class="card-header-tab header-tab4">MedUSA AI</div>
             <div class="row">
-                <div class="card-content col-7">
+                <div class="card-content col-7 d-flex justify-content-center flex-column">
                     <h5>MedUSA AI – Healthcare Claims & RCM Automation</h5>
                     <p>MedUSA AI automates healthcare claims processing and revenue cycle management, improving
                         accuracy, reducing denials, and accelerating reimbursements. Advanced AI algorithms detect
@@ -323,7 +323,7 @@
         <div class="sticky-card" id="card4">
             <div class="card-header-tab header-tab5">MedUSA AI</div>
             <div class="row">
-                <div class="card-content col-7">
+                <div class="card-content col-7 d-flex justify-content-center flex-column">
                     <h5>UnifyX – Unified Enterprise Operations</h5>
                     <p>UnifyX centralizes and automates enterprise operations by connecting your disparate systems into
                         one unified workflow. It eliminates silos between departments, allowing data and tasks to flow
@@ -341,33 +341,7 @@
 
 
 
-    <!-- 
-    -------------------------------------------------------------------------------
-    -------------------------------------------------------------------------------
-    -------------------------------------------------------------------------------
-    Achieve section
-    -------------------------------------------------------------------------------
-    -------------------------------------------------------------------------------
-    -------------------------------------------------------------------------------
-    -->
-
-    <div class="achieve-section accelating-wrapper platform-service">
-        <section class="hero-section">
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-11 col-lg-9 col-xl-11">
-                        <div class="text-center">
-                            <h3>See the Aktionable.ai Platform in action – request a customized demo</h3>
-                            <!-- <h1 class="hero-title">Accelerating Enterprise AI Outcomes</h1> -->
-
-                        </div>
-                        <div class="cta-buttons pt-3">
-                            <a href="#" class="btn btn-primary">Request a Demo</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-    </div>
+ 
 
 
     <!-- 
@@ -441,6 +415,35 @@
             </div>
         </div>
 
+    </div>
+
+
+       <!-- 
+    -------------------------------------------------------------------------------
+    -------------------------------------------------------------------------------
+    -------------------------------------------------------------------------------
+    Achieve section
+    -------------------------------------------------------------------------------
+    -------------------------------------------------------------------------------
+    -------------------------------------------------------------------------------
+    -->
+
+    <div class="achieve-section accelating-wrapper mt-3 mb-3 platform-service">
+        <section class="hero-section">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-11 col-lg-9 col-xl-11">
+                        <div class="text-center">
+                            <h3>See the Aktionable.ai Platform in action – request a customized demo</h3>
+                            <!-- <h1 class="hero-title">Accelerating Enterprise AI Outcomes</h1> -->
+
+                        </div>
+                        <div class="cta-buttons pt-3">
+                            <a href="#" class="btn btn-primary">Request a Demo</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
     </div>
 
     <!-- 
@@ -557,7 +560,7 @@
                                         href="#">
                                         <img src="images/logo-large.png" alt="Aktionable.ai Logo" class="logo-img">
                                         <div class="brand-text ">
-                                            <div class="brand-main">Aktionable Ai</div>
+                                            <div class="brand-main">Aktionable AI</div>
                                             <div class="brand-tagline">Smarter AI. Real Results</div>
                                         </div>
                                     </a>
