--- a/solutions.html
+++ b/solutions.html
@@ -39,7 +39,7 @@
         <a class="navbar-brand" href="index.html">
           <img src="images/logo.svg" alt="Aktionable.ai Logo" class="logo-img">
           <div class="brand-text">
-            <div class="brand-main">A<div class="kt">kt</div>ionable Ai</div>
+            <div class="brand-main">A<div class="kt">kt</div>ionable AI</div>
             <div class="brand-tagline">Smarter AI. Real Results</div>
           </div>
         </a>
@@ -301,7 +301,7 @@
                     href="#">
                     <img src="images/logo-large.png" alt="Aktionable.ai Logo" class="logo-img">
                     <div class="brand-text ">
-                      <div class="brand-main">Aktionable Ai</div>
+                      <div class="brand-main">Aktionable AI</div>
                       <div class="brand-tagline">Smarter AI. Real Results</div>
                     </div>
                   </a>
